Web Inspector: Grid overlay does not adjust for element transforms (rotation, scale, etc.) https://bugs.webkit.org/show_bug.cgi?id=222565

Reviewed by BJ Burg & Devin Rousso.

Added support throughout the grid drawing code to support grids that have been translated/rotated/scaled by
passing all coordinates through the `renderGrid`'s transform before drawing.

Relative directions/lengths throughout (e.g. `left`, `width`, and `column`) are expressed as if there was no
transform applied to the grid in order to help with readability and reasoning with the code in the future.

* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* inspector/InspectorOverlay.cpp:
- Added variant that doesn't resize bounds as a side effect.
(WebCore::quadToPath):
(WebCore::InspectorOverlay::drawLayoutHatching):
- Support drawing hatching in a `FloatQuad` instead of a `FloatRect`.
(WebCore::InspectorOverlay::drawGridOverlay):
- Use the `renderGrid` to transform known points into drawing coordinates.
* inspector/InspectorOverlay.h:
* platform/graphics/FloatLine.cpp: Added.
(WebCore::FloatLine::pointAtAbsoluteDistance const):
- Finds the point that is the given absolute distance from the start point. The distance may be less than 0 or
greater than the length of the line.
(WebCore::FloatLine::pointAtRelativeDistance const):
- Finds the point that is the given relative distance from the start point, where 0 is the start point and 1.0
is the end point. The distance may be less than zero or greater than 1.
(WebCore::FloatLine::extendedToBounds const):
- Creates a new `FloatLine` that at least covers the provided bounds such that the new line's points will either
be outside or on the bounds.
(WebCore::FloatLine::intersectionWith const):
- Finds the `FloatPoint` at the intersection of this `FloatLine` and another `FloatLine`.
* platform/graphics/FloatLine.h: Added.
- Introduced FloatLine class to store two points that conceptually form a line.
(WebCore::FloatLine::FloatLine):
(WebCore::FloatLine::start const):
(WebCore::FloatLine::end const):
(WebCore::FloatLine::length const):


Canonical link: https://commits.webkit.org/235030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274096 268f45cc-cd09-0410-ab3c-d52691b4dbfc